# muesly

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  PRIVACY_POLICY.md  QA.md  README.md  TERMS_OF_SERVICE.md  TODOs.md  mise.toml  package.json  release-please-config.json  renovate.json  rust-toolchain.toml
.cargo/: audit.toml
.github/: pull_request_template.md
api/: README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
app/: .env.example  package.json  pnpm-lock.yaml
app/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
app/src-tauri/examples/: seed-dev-data.rs  transcribe-fixture.rs
app/src-tauri/icons/: icon.icns
app/src-tauri/migrations/: 20260616000000_initial_schema.sql  20260616130000_add_transcription_language.sql  20260616140000_add_xai_api_key.sql  20260617120000_add_custom_vocabulary.sql  20260618000000_add_keychain_migrated.sql  20260619000000_add_transcript_speaker_id.sql  20260619010000_add_auto_detect_meetings.sql  20260619020000_add_dictation_cleanup.sql  20260628160000_add_calendar_events.sql  20260629120000_add_calendar_accounts.sql  20260706000000_add_folder_emoji.sql  20260707000000_add_calendar_account_calendars.sql  20260707010000_add_calendar_event_rules.sql  20260707020000_add_meeting_automation_settings.sql  20260707030000_add_scheduler_fired.sql  20260708000000_add_calendar_upcoming_cache.sql  20260710000000_add_speaker_names.sql  20260710010000_add_transcripts_meeting_id_index.sql  20260710020000_add_transcript_cleanup_enabled.sql  20260710030000_add_transcripts_fts.sql  20260711010000_transcripts_fts_external_content.sql  20260711030000_add_folder_nesting_favorites.sql  20260712000000_add_chat_messages.sql  20260712010000_add_shortcut_settings.sql  20260712020000_add_quality_pass_setting.sql  20260713000000_add_bars.sql  20260713010000_add_dictation_enabled.sql  20260713010000_bars_scenarios.sql  20260713020000_add_chat_bar_metadata.sql  20260713030000_add_transcript_revisions.sql  20260714000000_add_chat_bar_context.sql  20260714020000_repair_additional_placeholder_meeting_titles.sql  20260721000000_add_folder_context.sql  20260721020000_enable_folder_memory_by_default.sql  20260724000000_add_folder_memory_provenance.sql  20260724010000_add_meeting_embeddings.sql
app/src-tauri/src/: config.rs  disk.rs  embedding_engine.rs  embedding_indexer.rs  json.rs  lib.rs  main.rs  meeting_prompt.rs  model_idle.rs  model_integrity.rs  model_storage.rs  onboarding.rs  pill_window.rs  transcription_models.rs  tray.rs  utils.rs  vocabulary.rs
app/src-tauri/src/analytics/: client.rs  commands.rs  mod.rs
app/src-tauri/src/api/: bars.rs  folder_context.rs  folders.rs  meetings.rs  mod.rs  nl_search.rs  people.rs  settings.rs  types.rs
app/src-tauri/src/audio/: audio_processing.rs  batch_processor.rs  common.rs  decoder.rs  device_detection.rs  device_monitor.rs  diagnostics.rs  echo_cancel.rs  encode.rs  ffmpeg.rs  hardware_detector.rs  import.rs  incremental_saver.rs  level_monitor.rs  mod.rs  permissions.rs  pipeline.rs  playback_monitor.rs  recording_manager.rs  recording_preferences.rs  recording_saver.rs  recording_state.rs  retranscription.rs  stream.rs  system_audio_commands.rs  system_audio_stream.rs  vad.rs
app/src-tauri/src/audio/capture/: backend_config.rs  core_audio.rs  mod.rs
app/src-tauri/src/audio/devices/: configuration.rs  discovery.rs  microphone.rs  mod.rs  speakers.rs
app/src-tauri/src/audio/devices/platform/: windows.rs
app/src-tauri/src/audio/recording_commands/: devices.rs  mod.rs  query.rs
app/src-tauri/src/audio/transcription/: crosstalk.rs  engine.rs  mod.rs  provider.rs  segment_filter.rs  worker.rs
app/src-tauri/src/calendar/: commands.rs  conference.rs  context.rs  dedup.rs  eventkit.rs  google.rs  matching.rs  mod.rs  permissions.rs  scheduler.rs  service.rs
app/src-tauri/src/console_utils/: console_utils.rs
app/src-tauri/src/database/: commands.rs  fts.rs  manager.rs  mod.rs  models.rs  setup.rs
app/src-tauri/src/database/repositories/: bars.rs  calendar.rs  calendar_accounts.rs  calendar_event_rules.rs  chat_messages.rs  dictation_preset.rs  folder_context.rs  folders.rs  meeting.rs  meeting_embeddings.rs  mod.rs  notes.rs  setting.rs  speaker_names.rs  summary.rs  transcript.rs  transcript_chunk.rs  transcript_revision.rs
app/src-tauri/src/diarization/: client.rs  commands.rs  mod.rs  model.rs  reconcile.rs
app/src-tauri/src/dictation/: capture.rs  cleanup.rs  commands.rs  inject.rs  mod.rs
app/src-tauri/src/keychain/: mod.rs
app/src-tauri/src/meeting_detect/: commands.rs  known.rs  mod.rs  watcher.rs
app/src-tauri/src/notifications/: commands.rs  manager.rs  mod.rs  settings.rs  system.rs  types.rs
app/src-tauri/src/parakeet_engine/: commands.rs  engine.rs  mod.rs  model.rs
app/src-tauri/src/providers/: anthropic.rs  common.rs  groq.rs  mod.rs  openai.rs  xai.rs
app/src-tauri/src/providers/ollama/: metadata.rs  mod.rs  ollama.rs
app/src-tauri/src/providers/openrouter/: openrouter.rs
app/src-tauri/src/summary/: chat.rs  cleanup.rs  commands.rs  folder_memory.rs  global_chat.rs  language_detection.rs  llm_client.rs  metadata.rs  mod.rs  processor.rs  service.rs  template_commands.rs
app/src-tauri/src/summary/summary_engine/: client.rs  commands.rs  mod.rs  model_manager.rs  models.rs  sidecar.rs
app/src-tauri/src/summary/templates/: loader.rs  mod.rs  types.rs
app/src-tauri/src/whisper_engine/: acceleration.rs  commands.rs  decode_policy.rs  engine.rs  lang_lock.rs  mod.rs
app/src-tauri/templates/: README.md
diarization-helper/: Cargo.toml
diarization-helper/src/: main.rs
docs/: analytics-events.md  architecture.md  building.md  google-oauth-setup.md  gpu-acceleration.md  transcription-flows.md  transcription-models.md
llama-helper/: Cargo.toml
plans/: 001-chat-mention-characterization-tests.md  002-lightweight-chat-markdown-safe-links.md  003-accessible-chat-stream-announcements.md  004-reliable-chat-clear.md  005-collision-aware-mention-menu.md  README.md  (+2 more)
site/: .gitignore  (+10 more)
(+543 files in other folders)
