[workspace]
resolver = "2"
members = [
    "app/src-tauri",
    "llama-helper",
    "diarization-helper"
]

# Shared workspace settings
[workspace.package]
edition = "2021"
rust-version = "1.80"

# Shared dependencies that can be inherited by workspace members
[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }

# Package-specific release tuning for the local LLM sidecar. LTO is omitted
# because Cargo only supports it at the whole-workspace profile level.
[profile.release.package.llama-helper]
codegen-units = 1
opt-level = "s"
