[package]
name = "muesly"
version = "0.1.0"
description = "muesly — private speech-to-text for everything you say"
authors = ["afonsojramos"]
license = "MIT"
repository = "https://github.com/afonsojramos/muesly"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


# Hardware acceleration features for whisper-rs
# Cross-platform GPU acceleration with smart defaults
#
# BUILD INSTRUCTIONS:
# ===================
# macOS:     cargo build --release              (Metal GPU auto-enabledon)
#
# Windows:   cargo build --release              (CPU with OpenBLAS)
#            cargo build --release --features cuda    (NVIDIA GPU)
#            cargo build --release --features vulkan  (AMD/Intel GPU)
#
# Linux:     cargo build --release              (CPU with OpenBLAS)
#            cargo build --release --features cuda    (NVIDIA GPU)
#            cargo build --release --features hipblas (AMD GPU with ROCm)
#            cargo build --release --features vulkan  (Other GPUs)
#
# QUICK START: from app/, `pnpm tauri:dev` / `pnpm tauri:build` auto-detect the GPU backend.
#
[features]
default = ["platform-default"]  # Automatically enables best backend per platform

# Platform-appropriate defaults - see target-specific dependencies below
platform-default = []

# Manual GPU acceleration options (for power users to override defaults)
metal = ["whisper-rs/metal"]       # macOS: Apple Metal GPU (Auto-enabled on macOS)
coreml = ["whisper-rs/coreml"]     # macOS: Apple CoreML acceleration
cuda = ["whisper-rs/cuda"]         # Windows/Linux: NVIDIA CUDA GPU
vulkan = ["whisper-rs/vulkan"]     # Windows/Linux: AMD/Intel Vulkan GPU
hipblas = ["whisper-rs/hipblas"]   # Linux: AMD ROCm HIP

# CPU optimizations (fallback for systems without GPU)
openblas = ["whisper-rs/openblas"] # Optimized BLAS (Auto-enabled on Windows/Linux)
openmp = ["whisper-rs/openmp"]     # OpenMP parallel processing

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }
which = "6.0.1"
ffmpeg-sidecar = { git = "https://github.com/nathanbabcock/ffmpeg-sidecar", rev = "a1216c3d0256112702b4c1967101a55488088965" }


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
once_cell = "1.17.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
posthog-rs = "0.3.7"
whatlang = "0.16.4"

# Cross-platform audio capture
cpal = "0.15.3"

# Wav encoding - now using manual WAV creation instead of hound
# hound = "3.5"

# Cli ! shouldn't be required if using as lib
clap = { version = "4.3", features = ["derive"] }

# Dates
chrono = { version = "0.4.31", features = ["serde"] }

# Log
log = "0.4"
env_logger = "0.11"
tracing = "0.1.40"
which = "6.0.1"

# Bytes
bytemuck = "1.16.1"

# EBU R128 loudness normalization (professional broadcast standard)
ebur128 = "0.1"

# Noise suppression - RNNoise-based neural network noise reduction
nnnoiseless = "0.5"

# Speech recognition and async utilities
# NOTE: whisper-rs is declared in platform-specific sections below (macOS/Windows/Linux)
# to ensure correct GPU features are enabled per platform
futures-util = "0.3"
silero_rs = { git = "https://github.com/emotechlab/silero-rs", rev = "26a6460", package = "silero" }

# Parakeet (ONNX-based fast transcription) dependencies
ort = { version = "2.0.0-rc.10" }  # ONNX Runtime for Parakeet models
thiserror = "2.0.16"                # Error handling for Parakeet

# Async
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tokio-util = "0.7"  # Utilities for tokio including CancellationToken
async-trait = "0.1"  # Trait abstraction for async methods

reqwest = { version = "0.11", features = ["blocking", "multipart", "json", "stream"] }

# crossbeam
crossbeam = "0.8.4"
dashmap = "6.1.0"

# Directories
dirs = "5.0.1"

# Additional dependencies for notification system
url = "2.5.0"


# System monitoring for resource management
sysinfo = "0.32"

lazy_static = { version = "1.4.0" }
realfft = "3.4.0"
regex = "1.11.0"
ndarray = "0.16"
sha2 = "0.10"
hex = "0.4"
# Diarization model archive extraction (pyannote segmentation ships as tar.bz2).
tar = "0.4"
bzip2-rs = "0.1"
bytes = { version = "1.9.0", features = ["serde"] }

esaxx-rs = "0.1.10"
symphonia = { version = "0.5.4", features = ["aac", "isomp4", "mp3", "flac", "ogg", "vorbis", "pcm", "wav", "opt-simd"] }
rand = "0.8.5"
rayon = "1.10"
rubato = "0.15.0"
ringbuf = "0.4.8"
# Acoustic echo cancellation (pure-Rust WebRTC AEC3 port) for the transcription path.
aec3 = "0.3.0"
# Type-safe Tauri command bindings. Pin all three with `=` (RC line).
specta = { version = "=2.0.0-rc.25", features = ["derive", "chrono", "serde_json"] }
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
tempfile = "3.3.0"

ffmpeg-sidecar = { git = "https://github.com/nathanbabcock/ffmpeg-sidecar", rev = "a1216c3d0256112702b4c1967101a55488088965" }

sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "chrono"] }
keyring = "3"

# Common Tauri configuration
tauri = { version = "2.6.2", features = [ "macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-fs = "2.4.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-store = "2.4.0"
tauri-plugin-notification = "2.3.1"
tauri-plugin-updater = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-global-shortcut = "2"

# Desktop-only single instance guard
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "=2.3.7"

# macOS-specific dependencies with Metal GPU acceleration
[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2.6.2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
once_cell = "1.17.1"
objc = "0.2.7"
tauri-plugin-log = { version = "2.6.0", features = ["colored"] }
anyhow = "1.0"
time = { version = "0.3", features = ["formatting"] }
reqwest = { version = "0.11", features = ["multipart", "json"] }
core-graphics = "0.23"
cidre = { git = "https://github.com/yury/cidre", rev = "a9587fa", features = ["av"] }
libc = "0.2"
dasp = "0.11.0"
futures-channel = "0.3.31"

# PERFORMANCE: Enable Metal GPU + CoreML acceleration automatically on macOS
# CoreML provides additional acceleration for Apple Silicon chips
whisper-rs = { version = "0.13.2", features = ["raw-api", "metal", "coreml"] }

# Windows-specific dependencies
# Default: CPU-only build (no BLAS)
# Users can enable features manually:
#   --features cuda     (NVIDIA GPUs)
#   --features vulkan   (AMD/Intel GPUs)
#   --features openblas (OpenBLAS optimization, requires BLAS_INCLUDE_DIRS)
[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["raw-api"] }
futures-channel = "0.3.31"

# Linux-specific dependencies
# Default: CPU-only build (no BLAS)
# Users can enable features manually:
#   --features cuda     (NVIDIA GPUs)
#   --features vulkan   (AMD/Intel GPUs)
#   --features hipblas  (AMD ROCm)
#   --features openblas (OpenBLAS optimization, requires BLAS_INCLUDE_DIRS)
[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["raw-api"] }
futures-channel = "0.3.31"

[dev-dependencies]
tempfile = "3.3.0"
infer = "0.15"
strsim = "0.10.0"
futures = "0.3.31"
tracing-subscriber = "0.3.16"

[patch.crates-io]
cpal = { git = "https://github.com/RustAudio/cpal", rev = "51c3b43" }
esaxx-rs = { git = "https://github.com/thewh1teagle/esaxx-rs.git", branch = "feat/dynamic-msvc-link" }
