[package]
name = "muesly"
version = "0.2.0"
description = "muesly — private speech-to-text for everything you say"
authors = ["afonsojramos"]
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/afonsojramos/muesly"
edition = "2024"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


# Hardware acceleration features for whisper-rs
# Cross-platform GPU acceleration with smart defaults
#
# BUILD INSTRUCTIONS:
# ===================
# macOS:     cargo build --release              (Metal GPU auto-enabledon)
#
# Windows:   cargo build --release              (CPU with OpenBLAS)
#            cargo build --release --features cuda    (NVIDIA GPU)
#            cargo build --release --features vulkan  (AMD/Intel GPU)
#
# Linux:     cargo build --release              (CPU with OpenBLAS)
#            cargo build --release --features cuda    (NVIDIA GPU)
#            cargo build --release --features hipblas (AMD GPU with ROCm)
#            cargo build --release --features vulkan  (Other GPUs)
#
# QUICK START: from app/, `nub run tauri:dev` / `nub run tauri:build` auto-detect the GPU backend.
#
[features]
default = ["platform-default"]  # Automatically enables best backend per platform

# Platform-appropriate defaults - see target-specific dependencies below
platform-default = []

# Manual GPU acceleration options (for power users to override defaults)
metal = ["whisper-rs/metal"]       # macOS: Apple Metal GPU (Auto-enabled on macOS)
coreml = ["whisper-rs/coreml", "whisper-rs/metal"] # CoreML encoder + Metal decoder
cuda = ["whisper-rs/cuda"]         # Windows/Linux: NVIDIA CUDA GPU
vulkan = ["whisper-rs/vulkan"]     # Windows/Linux: AMD/Intel Vulkan GPU
hipblas = ["whisper-rs/hipblas"]   # Linux: AMD ROCm HIP

# CPU optimizations (fallback for systems without GPU)
openblas = ["whisper-rs/openblas"] # Optimized BLAS (Auto-enabled on Windows/Linux)
openmp = ["whisper-rs/openmp"]     # OpenMP parallel processing

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }
which = "8.0.0"
ffmpeg-sidecar = { git = "https://github.com/nathanbabcock/ffmpeg-sidecar", rev = "a1216c3d0256112702b4c1967101a55488088965" }


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
once_cell = "1.17.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
posthog-rs = "0.15.0"
whatlang = "0.18.0"
strsim = "0.11.1"

# Cross-platform audio capture
cpal = "0.15.3"

# Wav encoding - now using manual WAV creation instead of hound
# hound = "3.5"

# Cli ! shouldn't be required if using as lib
clap = { version = "4.3", features = ["derive"] }

# Dates
chrono = { version = "0.4.31", features = ["serde"] }

# Log
log = "0.4"
env_logger = "0.11"
tracing = "0.1.40"
which = "8.0.0"

# Bytes
bytemuck = "1.16.1"

# EBU R128 loudness normalization (professional broadcast standard)
ebur128 = "0.1"

# Noise suppression - RNNoise-based neural network noise reduction
nnnoiseless = "0.5"

# Speech recognition and async utilities
# NOTE: whisper-rs is declared in platform-specific sections below (macOS/Windows/Linux)
# to ensure correct GPU features are enabled per platform
futures-util = "0.3"
silero_rs = { git = "https://github.com/emotechlab/silero-rs", rev = "26a6460", package = "silero" }

thiserror = "2.0.16"

# Async
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tokio-util = "0.7"  # Utilities for tokio including CancellationToken

reqwest = { version = "0.11", features = ["blocking", "multipart", "json", "stream"] }

# crossbeam
crossbeam = "0.8.4"
dashmap = "6.1.0"

# Directories
dirs = "6.0.0"

# Additional dependencies for notification system
url = "2.5.0"


# System monitoring for resource management
sysinfo = "0.39.0"

lazy_static = { version = "1.4.0" }
realfft = "3.4.0"
regex = "1.11.0"
sha2 = "0.11"
hex = "0.4"
# Google Calendar OAuth: PKCE challenge encoding + opening the consent URL in
# the system browser. (PKCE/state randomness reuses uuid v4; loopback + token
# exchange use the existing reqwest.)
base64 = "0.22"
open = "5"
dotenvy = "0.15"
# Diarization model archive extraction (pyannote segmentation ships as tar.bz2).
tar = "0.4"
bzip2-rs = "0.1"
bytes = { version = "1.9.0", features = ["serde"] }

esaxx-rs = "0.1.10"
symphonia = { version = "0.5.4", features = ["aac", "isomp4", "mp3", "flac", "ogg", "vorbis", "pcm", "wav", "opt-simd"] }
rand = "0.10.0"
rayon = "1.10"
rubato = "0.15.0"
ringbuf = "0.5.0"
# Acoustic echo cancellation (pure-Rust WebRTC AEC3 port) for the transcription path.
aec3 = "0.3.0"
# Dictation text injection: clipboard write (arboard) + synthesized paste (enigo).
arboard = "3"
enigo = "0.6"
# Type-safe Tauri command bindings. Pin all three with `=` (RC line).
specta = { version = "=2.0.0-rc.25", features = ["derive", "chrono", "serde_json"] }
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
tempfile = "3.3.0"

ffmpeg-sidecar = { git = "https://github.com/nathanbabcock/ffmpeg-sidecar", rev = "a1216c3d0256112702b4c1967101a55488088965" }

sqlx = { version = "0.9", features = [ "runtime-tokio", "sqlite", "chrono"] }
# keyring v4's default `v1` feature auto-selects a PERSISTENT native backend per
# platform: macOS Keychain, Windows Credential Manager, and on Linux the Secret
# Service via zbus (pure Rust, no libdbus system dependency). All survive reboot,
# so Linux gets the same experience as macOS. (v4 requires Rust 1.88+.)
keyring = "4"

# Common Tauri configuration
tauri = { version = "2.6.2", features = [ "macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-fs = "2.4.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-store = "2.4.0"
tauri-plugin-notification = "2.3.1"
tauri-plugin-updater = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-global-shortcut = "2"

# Desktop-only single instance guard
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "=2.3.7"

# macOS-specific dependencies with Metal GPU acceleration
[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2.6.2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
once_cell = "1.17.1"
objc = "0.2.7"
tauri-plugin-log = { version = "2.6.0", features = ["colored"] }
anyhow = "1.0"
time = { version = "0.3", features = ["formatting"] }
reqwest = { version = "0.11", features = ["multipart", "json"] }
core-graphics = "0.25"
cidre = { git = "https://github.com/yury/cidre", rev = "a9587fa", features = ["av"] }
# EventKit (local calendar) bindings. The objc2 stack is already resolved in
# Cargo.lock transitively (via tauri/tray-icon/muda), so this is a no-bump add.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSDate", "NSArray", "NSString", "NSEnumerator"] }
objc2-event-kit = { version = "0.3", features = [
    "EKEventStore",
    "EKEvent",
    "EKCalendarItem",
    "EKCalendar",
    "EKParticipant",
    "EKStructuredLocation",
    "EKObject",
    "EKTypes",
    "block2",
] }
block2 = "0.6"
libc = "0.2"
dasp = "0.11.0"
futures-channel = "0.3.31"

# The launcher selects Metal automatically. Keep backend features controlled by
# the feature table above so `:cpu`, `:metal`, and `:coreml` actually differ.
whisper-rs = { version = "0.16.0", features = ["raw-api"] }

# Windows-specific dependencies
# Default: CPU-only build (no BLAS)
# Users can enable features manually:
#   --features cuda     (NVIDIA GPUs)
#   --features vulkan   (AMD/Intel GPUs)
#   --features openblas (OpenBLAS optimization, requires BLAS_INCLUDE_DIRS)
[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.16.0", features = ["raw-api"] }
futures-channel = "0.3.31"

# Linux-specific dependencies
# Default: CPU-only build (no BLAS)
# Users can enable features manually:
#   --features cuda     (NVIDIA GPUs)
#   --features vulkan   (AMD/Intel GPUs)
#   --features hipblas  (AMD ROCm)
#   --features openblas (OpenBLAS optimization, requires BLAS_INCLUDE_DIRS)
[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.16.0", features = ["raw-api"] }
futures-channel = "0.3.31"

[dev-dependencies]
tempfile = "3.3.0"
infer = "0.19"
futures = "0.3.31"
tracing-subscriber = "0.3.16"
